--- a/src/app/views/company-settings/company-settings-edit/company-settings-edit.component.html
+++ b/src/app/views/company-settings/company-settings-edit/company-settings-edit.component.html
@@ -30,9 +30,7 @@
 
       <!-- buttons-->
       <div class="mt-2">
-        <button [routerLink]="siteUrls.companySettings.details" class="me-2 btn btn-primary">
-          <span class="fa-solid fa-chevron-left"></span> Volver
-        </button>
+        <aw-btn-back cssClass="me-2 btn btn-primary"></aw-btn-back>
 
         <aw-btn-loading
           [loading]="loadingForm"
