--- a/src/app/views/company-tasks/company-task-edit/company-task-edit.component.html
+++ b/src/app/views/company-tasks/company-task-edit/company-task-edit.component.html
@@ -68,9 +68,7 @@
           <!-- end color -->
         </div>
 
-        <button [routerLink]="urlCompanyTaskDetails" class="btn btn-primary mt-2" type="button">
-          <span class="fa-solid fa-chevron-left"></span> Volver
-        </button>
+        <aw-btn-back cssClass="btn btn-primary mt-2"></aw-btn-back>
 
         <aw-btn-loading
           [loading]="loadingForm"
