--- a/src/app/views/company-tasks/company-task-view/company-task-users/company-task-users.component.html
+++ b/src/app/views/company-tasks/company-task-view/company-task-users/company-task-users.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex my-3">
-  <h5 class="m-auto">Usuarios en la tarea - {{ companyTaskSelected()?.name }}</h5>
+  <h5 class="m-auto">Empleados en la tarea - {{ companyTaskSelected()?.name }}</h5>
 </div>
 
 <!-- toolbar -->
