--- a/src/app/views/departments/department-create/department-create.component.html
+++ b/src/app/views/departments/department-create/department-create.component.html
@@ -63,9 +63,7 @@
         btnIcon="fa-solid fa-list-check"
         btnText="Crear"></aw-btn-loading>
 
-      <button [routerLink]="siteUrls.departments.list" class="btn btn-primary mt-2 ms-2" type="button">
-        <span class="fa-solid fa-chevron-left"></span> Volver
-      </button>
+      <aw-btn-back cssClass="btn btn-primary mt-2 ms-2"></aw-btn-back>
       <!-- end buttons-->
     </form>
     <!-- end form -->
