--- a/src/app/views/departments/department-view/department-view.component.html
+++ b/src/app/views/departments/department-view/department-view.component.html
@@ -7,7 +7,7 @@
 
   <!-- department details -->
   <ng-container *ngIf="departmentSelected()">
-    <aw-department-details></aw-department-details>
+    <aw-department-details [departmentId]="departmentId"></aw-department-details>
   </ng-container>
   <!-- end department details -->
 
