--- a/src/app/views/employees/employee-edit/employee-edit.component.html
+++ b/src/app/views/employees/employee-edit/employee-edit.component.html
@@ -68,9 +68,7 @@
         </div>
         <!-- end entryDate -->
 
-        <button [routerLink]="urlEmployeeDetails" class="btn btn-primary mt-2" type="button">
-          <span class="fa-solid fa-chevron-left"></span> Volver
-        </button>
+        <aw-btn-back cssClass="btn btn-primary mt-2"></aw-btn-back>
 
         <aw-btn-loading
           [loading]="loadingForm"
