--- a/src/app/views/employees/employee-invite/employee-invite.component.html
+++ b/src/app/views/employees/employee-invite/employee-invite.component.html
@@ -53,9 +53,7 @@
         btnIcon="fas fa-user-plus"
         btnText="Invitar"></aw-btn-loading>
 
-      <button [routerLink]="siteUrls.employees.list" class="btn btn-primary mt-2 ms-2" type="button">
-        <span class="fa-solid fa-chevron-left"></span> Volver
-      </button>
+      <aw-btn-back cssClass="btn btn-primary mt-2 ms-2"></aw-btn-back>
       <!-- end buttons-->
     </form>
     <!-- end from-->
