--- a/src/app/views/company-tasks/company-task-create/company-task-create.component.html
+++ b/src/app/views/company-tasks/company-task-create/company-task-create.component.html
@@ -57,15 +57,12 @@
       </div>
 
       <!-- buttons-->
+      <aw-btn-back cssClass="btn btn-primary mt-2 me-2"></aw-btn-back>
       <aw-btn-loading
         [loading]="loading"
         btnClass="btn btn-success mt-2"
         btnIcon="fa-solid fa-list-check"
         btnText="Crear"></aw-btn-loading>
-
-      <button [routerLink]="siteUrls.companyTasks.list" class="btn btn-primary mt-2 ms-2" type="button">
-        <span class="fa-solid fa-chevron-left"></span> Volver
-      </button>
       <!-- end buttons-->
     </form>
     <!-- end form -->
