--- a/src/app/views/departments/department-view/department-details/department-details.component.html
+++ b/src/app/views/departments/department-view/department-details/department-details.component.html
@@ -1,3 +1,59 @@
 <aw-card>
-  <p>department-details works!</p>
+  <table class="table table-striped table-borderless">
+    <!-- sonarLint -->
+    <caption></caption>
+    <thead>
+      <th></th>
+    </thead>
+    <!-- end sonarLint -->
+
+    <!-- data company task -->
+    <tbody>
+      <ng-container *ngIf="departmentSelected() && !loadingDepartmentSelected()">
+        <tr>
+          <td>Nombre</td>
+          <td>
+            <aw-badge
+              [background]="departmentSelected()?.background"
+              [color]="departmentSelected()?.color"
+              [name]="departmentSelected()?.name"></aw-badge>
+          </td>
+        </tr>
+        <tr>
+          <td>Activa</td>
+          <td>
+            <span class="d-flex">
+              <span [innerHTML]="departmentSelected()?.active | boolToIcon"></span>
+              <span class="ms-auto">
+                <ng-container *ngIf="departmentSelected()?.active">
+                  <aw-btn-loading
+                    (click)="handleDeactivateDepartment()"
+                    [loading]="loadingDepartmentState"
+                    btnClass="btn btn-sm btn-outline-danger"
+                    btnText="Desactivar"></aw-btn-loading>
+                </ng-container>
+
+                <ng-container *ngIf="!departmentSelected()?.active">
+                  <aw-btn-loading
+                    (click)="handleActivateDepartment()"
+                    [loading]="loadingDepartmentState"
+                    btnClass="btn btn-sm btn-outline-success"
+                    btnText="Activar"></aw-btn-loading>
+                </ng-container>
+              </span>
+            </span>
+          </td>
+        </tr>
+      </ng-container>
+      <!-- end data company task -->
+
+      <!-- spinner -->
+      <aw-table-loading [loading]="loadingDepartmentSelected()"></aw-table-loading>
+      <!-- end spinner -->
+    </tbody>
+  </table>
+
+  <aw-btn-back></aw-btn-back>
+
+  <button [routerLink]="urlToEdit" class="btn btn-success ms-2"><span class="fa-solid fa-pencil"></span> Editar</button>
 </aw-card>
