--- a/src/app/views/departments/department-edit/department-edit.component.html
+++ b/src/app/views/departments/department-edit/department-edit.component.html
@@ -1,1 +1,83 @@
-<p>department-edit works!</p>
+<aw-view-base>
+  <aw-view-header [breadcrumb]="breadcrumb">Editar departamento</aw-view-header>
+
+  <aw-card>
+    <!-- form -->
+    <ng-container *ngIf="department">
+      <form (ngSubmit)="handleSubmit()" [formGroup]="form">
+        <aw-non-field-errors [badRequest]="badRequest"></aw-non-field-errors>
+
+        <ng-container *ngIf="form.get('name')?.value">
+          <div class="my-3">
+            <aw-badge
+              [background]="form.get('background')?.value"
+              [color]="form.get('color')?.value"
+              [name]="form.get('name')?.value"></aw-badge>
+          </div>
+        </ng-container>
+
+        <!-- name -->
+        <div class="mb-2">
+          <aw-form-input
+            [badRequest]="badRequest"
+            [form]="form"
+            [submitted]="submitted"
+            fieldName="name"
+            formControlName="name"
+            label="Nombre"></aw-form-input>
+        </div>
+        <!-- end name -->
+
+        <!-- active -->
+        <div class="mb-2">
+          <aw-form-checkbox
+            [badRequest]="badRequest"
+            [form]="form"
+            [submitted]="submitted"
+            fieldName="active"
+            formControlName="active"
+            label="Activo"></aw-form-checkbox>
+        </div>
+        <!-- end active -->
+
+        <div class="d-flex">
+          <!-- background -->
+          <div class="mb-2">
+            <aw-form-color
+              [badRequest]="badRequest"
+              [form]="form"
+              [submitted]="submitted"
+              fieldName="background"
+              formControlName="background"
+              label="Color de fondo">
+            </aw-form-color>
+          </div>
+          <!-- end background -->
+
+          <!-- color -->
+          <div class="mb-2 ms-5">
+            <aw-form-color
+              [badRequest]="badRequest"
+              [form]="form"
+              [submitted]="submitted"
+              fieldName="color"
+              formControlName="color"
+              label="Color de texto">
+            </aw-form-color>
+          </div>
+          <!-- end color -->
+        </div>
+
+        <aw-btn-back cssClass="btn btn-primary mt-2"></aw-btn-back>
+
+        <aw-btn-loading
+          [loading]="loadingForm"
+          btnClass="btn btn-success mt-2 ms-2"
+          btnIcon="fa-regular fa-floppy-disk"
+          btnText="Guardar"
+          spinnerLoadingText="Guardando"></aw-btn-loading>
+      </form>
+    </ng-container>
+    <!-- end form -->
+  </aw-card>
+</aw-view-base>
