Implementado en start y finish de time control el DeviceType

--- a/src/app/views/tests/home-test/home-test.component.html
+++ b/src/app/views/tests/home-test/home-test.component.html
@@ -4,7 +4,5 @@
     <button (click)="handleAlertsConsole()" class="btn btn-primary">Mostrar alertas en consola</button>
   </div>
 
-  <div class="mt-4">
-    <aw-timezone-selector></aw-timezone-selector>
-  </div>
+  <div class="mt-4"></div>
 </aw-view-base>
