Fix orden en router

--- a/src/app/views/employees/employee-invite/employee-invite.component.html
+++ b/src/app/views/employees/employee-invite/employee-invite.component.html
@@ -47,13 +47,13 @@
       <!-- end email -->
 
       <!-- buttons-->
+      <aw-btn-back cssClass="btn btn-primary mt-2 me-2"></aw-btn-back>
+
       <aw-btn-loading
         [loading]="loading"
         btnClass="btn btn-success mt-2"
         btnIcon="fas fa-user-plus"
         btnText="Invitar"></aw-btn-loading>
-
-      <aw-btn-back cssClass="btn btn-primary mt-2 ms-2"></aw-btn-back>
       <!-- end buttons-->
     </form>
     <!-- end from-->
