--- a/src/app/views/employees/employee-view/employee-time-control/employee-time-control.component.html
+++ b/src/app/views/employees/employee-view/employee-time-control/employee-time-control.component.html
@@ -12,6 +12,8 @@
   <div class="ms-auto small text-muted">Tiempo total: {{ timeTotalInMonth }}</div>
 </div>
 
+<aw-employee-chart-device></aw-employee-chart-device>
+
 <!-- times -->
 <div>
   <aw-time-control-progress
